# Compiler

./: .gitignore  CMakeLists.txt  README.md
docs/: REPORT.md
grammer/: ArabicGrammarLexer.java  Expr.g4  Expr.interp  Expr2.g4  ExprBaseListener.java  ExprLexer.interp  ExprLexer.java  ExprListener.java  ExprParser.java  input.txt
grammer/.antlr/: Expr.interp  ExprBaseListener.java  ExprLexer.cpp  ExprLexer.h  ExprLexer.interp  ExprLexer.java  ExprListener.java  ExprParser.cpp  ExprParser.h  ExprParser.java
ide/: WpfArabicIDE.sln  windows_msi.ps1  windows_package.ps1
ide/ArabicIDE/: ArabicIDE.csproj  MainForm.Designer.cs  MainForm.cs  Program.cs
ide/ArabicIDE.Tests/: ArabicIDE.Tests.csproj  CompilerRunnerTests.cs
ide/ArabicIDE/CompilerIntegration/: CompilerRunner.cs
ide/WpfArabicIDE/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  PACKAGING.md  PUBLISHING.md  README.md  WpfArabicIDE.csproj
ide/WpfArabicIDE.Contracts/: IPlugin.cs
ide/WpfArabicIDE.Packaging/: Package.appxmanifest  WpfArabicIDE.Packaging.wapproj
ide/WpfArabicIDE.PluginSample/: HelloPlugin.cs  WpfArabicIDE.PluginSample.csproj
ide/WpfArabicIDE.Tests/: CompilerRunnerTests.cs  ConfigServiceTests.cs  WpfArabicIDE.Tests.csproj
ide/WpfArabicIDE/Models/: CompilerResult.cs
ide/WpfArabicIDE/Properties/PublishProfiles/: WinX64.pubxml
ide/WpfArabicIDE/Services/: CompilerRunner.cs  ConfigService.cs
ide/WpfArabicIDE/Utils/: ArabicSyntaxHighlighting.xshd  ProjectTemplate.al  RelayCommand.cs
ide/WpfArabicIDE/Views/: SettingsWindow.xaml  SettingsWindow.xaml.cs
scripts/: package_linux.sh
src/: CompilerResultsHandler.h  CustomErrorListener.h  input.txt  main.cpp  start.h
src/semantic/: TypeCheckerSemanticAnalyzer.h
tests/: lexer_test.cpp  parser_test.cpp  semantic_test.cpp
